# ftxui-image-view

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: image_view.hpp
libs/: tiv_lib.cpp  tiv_lib.h
src/: image_view.cpp
